# forecastbench

./: .coverage  .gitignore  CLAUDE.md  README.md  analyze.py  baseline_agent.py  calibrate.py  cutoff.py  dummy_forecaster.py  eval.py  factory.md  fetch_data.py  logging_config.py  pyproject.toml  score.py  submit.py  timeseries_rag.py
.github/workflows/: ci.yml
eval/: score.py
results/: 20260721T144555Z_unknown_2026-07-19-llm.json  RESULTS.md
tests/: conftest.py  test_analyze.py  test_async_eval.py  test_baseline_agent.py  test_bss.py  test_cache_poisoning.py  test_calibrate.py  test_calibration.py  test_cli.py  test_code_quality.py  test_cutoff.py  test_ensemble.py  test_eval.py  test_eval_async.py  test_fetch_data.py  test_held_out.py  test_inference_config.py  test_integration.py  test_leaderboard.py  test_logging_config.py  test_missing_fields.py  test_multi_horizon_prompt.py  test_official_parity.py  test_per_round.py  test_prompt_alignment.py  test_score.py  test_submit.py  test_superforecaster.py  test_timeseries_rag.py
